# R-type

./: .gitignore  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.md  README.md  conanfile.txt  framework.h  protocol.txt  rfc888_TCP.txt  rfc999_UDP.txt  targetver.h
.github/workflows/: cmake.yml
BaseSystems/: animation_system.cpp  gravity_system.cpp  interaction_system.cpp
Engine/: Makefile  README.md  config.yaml  r-type_graphic  registry.hpp  rtype  sparse_array.hpp
Engine/BaseComponent/: animation.hpp  collusion.hpp  draw.hpp  image.cpp  image.hpp  interaction.cpp  interaction.hpp  network.hpp  network_player.hpp  position.hpp  rect.cpp  rect.hpp
Engine/BaseComponent/Drawable/: Drawable.cpp  Drawable.hpp
Engine/BaseSystems/: animation_system.cpp  collusion_system.cpp  draw_system.cpp  interaction_system.cpp  network_player_system.cpp  network_sytem.cpp  position_system.cpp  rect_system.cpp
Engine/ComponentSystem/: CMakeLists.txt  IComponentSystem.hpp  draw.cpp  draw.hpp  print.cpp  print.hpp
Engine/Game/: handle_entity.cpp  load_component.cpp  load_systems.cpp  main.cpp
Engine/Graphic/: IGraphic.hpp
Engine/Graphic/SFML/: SFML.hpp  SFML_lib.cmake
Engine/Include/: data.hpp  entity.hpp  handle_entity.hpp  interactive.hpp  network.hpp  networks.hpp  registry.hpp  sparse_array.hpp  systems.hpp
Engine/Interaction/: ILoad_Interaction.hpp  Interaction_lib.cmake  down_deplacement.cpp  left_deplacement.cpp  load_systems.cpp  right_deplacement.cpp
Engine/Interaction/Include/: down_deplacement.hpp  left_deplacement.hpp  right_deplacement.hpp  shoot_rocket.hpp  up_deplacement.hpp
Engine/Interaction/src/: down_deplacement.cpp  left_deplacement.cpp  right_deplacement.cpp  shoot_rocket.cpp  up_deplacement.cpp
Engine/Network/: network.cpp
Engine/ParseComponent/: AParseComponent.cpp  AParseComponent.hpp  AParseInteraction.cpp  AParseInteraction.hpp  IParseComponent.hpp  parse_animation.cpp  parse_animation.hpp  parse_draw.cpp  parse_draw.hpp  parse_image.cpp  parse_image.hpp  parse_interaction.cpp  parse_interaction.hpp  parse_network.cpp  parse_network.hpp  parse_position.cpp  parse_position.hpp  parse_rect.cpp  parse_rect.hpp
Engine/Parsing/: Parsor.hpp  Yaml.cpp  Yaml.hpp  a.out  handling_component_system.cpp  handling_component_system.hpp  handling_interaction.cpp  handling_interaction.hpp  note  parsing.cpp  parsing.hpp
Engine/server/include/: server.hpp
Engine/server/src/: Server.cpp  main.cpp  tcp.cpp  udp.cpp
Interaction/: down_deplacement.cpp  left_deplacement.cpp  up_deplacement.cpp
NetworkConnexion/ECS/: ConnexionServer.cpp
NetworkConnexion/ECS/ECS/Components/: AComponent.cpp  AComponent.hpp  ComponentType.hpp  IComponents.hpp  Position.cpp  Position.hpp
client/include/: client.hpp
client/src/: main.cpp  tcp.cpp  udp.cpp
clientGraphic/: Core.cpp  Core.hpp  main.cpp
clientGraphic/Drawable/: Drawable.cpp  Drawable.hpp
clientGraphic/Graphic/: AGraphic.cpp  AGraphic.hpp  IGraphic.hpp  events.hpp
clientGraphic/Graphic/SFML/: SFML.cpp  SFML.hpp  SFML_lib.cmake
clientGraphic/include/: client.hpp
html/: AGraphic_8hpp.html  AGraphic_8hpp_source.html  AParseComponent_8cpp.html  AParseComponent_8hpp_source.html  AParseInteraction_8cpp.html  AParseInteraction_8hpp_source.html  ClientInfo_8hpp.html  ClientInfo_8hpp_source.html  Core_8hpp.html  Core_8hpp_source.html  Drawable_8hpp.html  Drawable_8hpp_source.html  Engine_2BaseSystems_2animation__system_8cpp.html  Engine_2BaseSystems_2interaction__system_8cpp.html  Engine_2Game_2load__systems_8cpp.html  Engine_2Game_2main_8cpp.html  Engine_2Parsing_2Parsor_8hpp_source.html  Engine_2server_2include_2server_8hpp_source.html  Engine_2server_2src_2main_8cpp.html  Engine_2server_2src_2tcp_8cpp.html  Engine_2server_2src_2udp_8cpp.html  IComponentSystem_8hpp.html  IComponentSystem_8hpp_source.html  IGraphic_8hpp.html  IGraphic_8hpp_source.html  ILoad__Interaction_8hpp.html  ILoad__Interaction_8hpp_source.html  IParseComponent_8hpp_source.html  SFML_8hpp_source.html  Yaml_8cpp.html  Yaml_8hpp_source.html  animation_8hpp.html  animation_8hpp_source.html  annotated.html  classAGraphic-members.html  classAGraphic.html  classAParseComponent-members.html  classAParseComponent.html  classAParseInteraction-members.html  classAParseInteraction.html  (+272 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+31 more)
include/: README.md  headers.hpp
json/: Parsor.hpp  note
latex/: AGraphic_8hpp.tex  AParseComponent_8cpp.tex  AParseInteraction_8cpp.tex  ClientInfo_8hpp.tex  Core_8hpp.tex  Drawable_8hpp.tex  Engine_2BaseSystems_2animation__system_8cpp.tex  Engine_2BaseSystems_2interaction__system_8cpp.tex  Engine_2Game_2load__systems_8cpp.tex  Engine_2Game_2main_8cpp.tex  Engine_2server_2src_2main_8cpp.tex  Engine_2server_2src_2tcp_8cpp.tex  Engine_2server_2src_2udp_8cpp.tex  IComponentSystem_8hpp.tex  IGraphic_8hpp.tex  ILoad__Interaction_8hpp.tex  Yaml_8cpp.tex  animation_8hpp.tex  annotated.tex  classAGraphic.eps  classAGraphic.tex  classAParseComponent.eps  classAParseComponent.tex  classAParseInteraction.eps  classAParseInteraction.tex  classClient.tex  classClientInfo.tex  classCore.tex  classDrawable.tex  classIComponentSystem.eps  classIComponentSystem.tex  classIGraphic.eps  classIGraphic.tex  classILoad__Interaction.eps  classILoad__Interaction.tex  classIParseComponent.eps  classIParseComponent.tex  classParsor.tex  classSFML.eps  classSFML.tex  (+111 more)
server/include/: server.hpp
server/src/: Server.cpp  main.cpp  tcp.cpp  udp.cpp
shared/: README.md
shared/include/: ClientInfo.hpp  headers.hpp
shared/src/: ClientInfo.cpp
